--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,2 +1,101 @@
-<h1>hola holaa!</h1>
-<p>:D</p>
+<div data-magellan-expedition="fixed">
+  <dl class="sub-nav">
+    <dd data-magellan-arrival="inicio"><a href="#inicio">Inicio</a></dd>
+    <dd data-magellan-arrival="trabajos"><a href="#trabajos">Trabajos</a></dd>
+    <dd data-magellan-arrival="clientes"><a href="#clientes">Clientes</a></dd>
+    <dd data-magellan-arrival="contacto"><a href="#contacto">Contacto</a></dd>
+  </dl>
+</div>
+
+<section class="fullscreen" id="inicio">
+	<div class="row">
+	  <div class="large-12 columns">
+	  	
+	  </div>
+	</div>
+</section>
+
+<section class="fullscreen" id="trabajos">
+	<div class="row">
+	  <div class="large-12 columns text-center">
+	  	<h2>Echa un vistazo a nuestros últimos trabajos</h2>
+	  </div>
+	</div>
+
+	<div class="row">
+		<div class="large-12 columns text-center">
+	  	<h5></h5>
+	  </div>
+	</div>
+</section>
+
+<section class="fullscreen" id="servicios">
+	<div class="row">
+	  <div class="large-12 columns text-center">
+	  	<h3>Calidad - Rapidez - Retiro sin costo</h3>
+	  </div>
+	</div>
+
+	<div class="row">
+	  <div class="large-12 columns text-center">
+	  	<h5>Nos enfocamos en la prestacion de servicios de grabados publicitarios, colegios, empresas y marcaje en general. Prestamos un servicio de calidad, priorisamos los tiempos de entrega y asi satisfacemos las necesidades de nuestros clientes</h5>
+	  </div>
+	</div>
+</section>
+
+<section class="fullscreen" id="clientes">
+	<div class="row">
+	  <div class="large-12 columns text-center">
+	  	<h2>Nuestros Clientes</h2>
+	  </div>
+	</div>
+
+	<div class="row" style="margin-bottom: 40px;">
+	  <div class="large-3 columns text-center"><%= image_tag "logo1.jpg", style: "height: 150px; width: 200px"%></div>
+	  <div class="large-3 columns text-center"><%= image_tag "logo2.jpg", style: "height: 150px; width: 170px"%></div>
+	  <div class="large-3 columns text-center"><%= image_tag "logo3.jpg", style: "height: 150px; width: 170px"%></div>
+	  <div class="large-3 columns text-center"><%= image_tag "logo4.jpg", style: "height: 170px; width: 190px"%></div>
+	</div>
+
+	<div class="row">
+	  <div class="large-3 columns text-center"><%= image_tag "logo5.jpg", style: "height: 150px; width: 170px"%></div>
+	  <div class="large-3 columns text-center"><%= image_tag "logo6.jpg", style: "height: 150px; width: 170px"%></div>
+	  <div class="large-3 columns text-center"><%= image_tag "logo7.jpg", style: "height: 150px; width: 170px"%></div>
+	  <div class="large-3 columns text-center"><%= image_tag "logo8.jpg", style: "height: 150px; width: 170px"%></div>
+	</div>
+</section>
+
+
+<section class="fullscreen" id="contacto">
+	<div class="row">
+	  <div class="large-12 columns text-center">
+	  	<h2>Contáctanos</h2>
+	  </div>
+	</div>
+
+	<div class="row">
+		<div class="large-4 columns" style="color: #999999"> .</div>
+	  <div class="large-4 columns text-center">
+		  <input type="text" placeholder="Email">
+		</div>
+		<div class="large-4 columns" style="color: #999999"> .</div>
+	</div>
+
+	<div class="row">
+		<div class="large-12 columns text-center">
+		  <a href="#" class="button">Enviar</a>
+		</div>
+	</div>
+</section>
+
+<section class="fullscreen" id="mapa">
+	<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3325.815101935831!2d-70.6663327!3d-33.53219260000001!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662daffaa448a37%3A0xf5f5a128d9b67d67!2sBrisas+del+Maipo+245%2C+La+Cisterna%2C+Regi%C3%B3n+Metropolitana!5e0!3m2!1ses-419!2scl!4v1408244999566" frameborder="0" style="border:0"></iframe>
+</section>
+
+<section class="fullscreen" id="footer">
+	<div class="row">
+	  <div class="large-12 columns">
+	  	<h6 class="subheader">Sitio diseñado y programado por magickdevs.com</h6>
+	  </div>
+	</div>
+</section>
