sección inicio ahora se ve más bonita :3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Grabados</title>
+    <title>Grabados Barón</title>
 
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "vendor/modernizr" %>
@@ -14,11 +14,5 @@
   <body>
     <%= yield %>
     <%= javascript_include_tag "application" %>
-
-    <script type="text/javascript">
-    $(document).ready(function($) {
-      Vistas_public.index();
-    });
-    </script>
   </body>
 </html>
