--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -8,16 +8,22 @@
 }
 
 body{
+	font-family: 'Quicksand';
 	background-color: #F3F3F3;
-	font-family: 'quicksand';
 }
 
 #inicio{
 	background-color: #999;
 	height: 100%;
-	/*-moz-box-shadow: 0px 0px 17px #000000;
-	-webkit-box-shadow: 0px 0px 17px #000000;
-	box-shadow: 0px 0px 17px #000000;*/
+	padding: 200px 0;
+	h1{
+		font-size: 47px;
+	}
+	h2{
+		line-height: 37px;
+		padding-bottom: 26px;
+		font-weight: 100;
+	}
 }
 
 #trabajos{
