--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -10,7 +10,19 @@
 <section class="fullscreen" id="inicio">
 	<div class="row">
 	  <div class="large-12 columns">
-	  	
+	  	<div class="large-12 columns text-center">
+		  	<h1>Grabados Barón</h1>
+		  </div>
+	  </div>
+	  <div class="large-12 columns">
+	  	<div class="large-12 columns text-center">
+		  	<h2><small>Grabados Publicitarios - Regalos Empresariales - Colegios - Señaletica - Premios - Piochas de Identificacion</small></h2>
+		  </div>
+	  </div>
+	  <div class="large-12 columns">
+	  	<div class="large-12 columns text-center">
+			  <dd data-magellan-arrival="trabajos"><a href="#trabajos" class="button">Conoce más</a></dd>
+		  </div>
 	  </div>
 	</div>
 </section>
