--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,5 +1,5 @@
 <div data-magellan-expedition="fixed">
-  <dl class="sub-nav">
+  <dl class="sub-nav" id="menu">
     <dd data-magellan-arrival="inicio"><a href="#inicio">Inicio</a></dd>
     <dd data-magellan-arrival="trabajos"><a href="#trabajos">Trabajos</a></dd>
     <dd data-magellan-arrival="clientes"><a href="#clientes">Clientes</a></dd>
@@ -83,6 +83,14 @@
 	  <div class="large-12 columns text-center">
 	  	<h2>Contáctanos</h2>
 	  </div>
+	</div>
+
+	<div class="row">
+		<div class="large-4 columns" style="color: #999999"> .</div>
+		<div class="large-4 columns text-center">
+		  <input type="text" placeholder="Nombre de persona o empresa">
+		</div>
+		<div class="large-4 columns" style="color: #999999"> .</div>
 	</div>
 
 	<div class="row">
