imágenes para la sección de trabajos

--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -35,8 +35,13 @@
 	</div>
 
 	<div class="row">
-		<div class="large-12 columns text-center">
-	  	<h5></h5>
+	  <div class="large-12 columns text-center">
+	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
+			  <li><a href="assets/img1.jpg"><%= image_tag "img1.jpg"%></a></li>
+			  <li><a href="assets/img2.jpg"><%= image_tag "img2.jpg"%></a></li>
+			  <li><a href="assets/img3.jpg"><%= image_tag "img3.jpg"%></a></li>
+			  <li><a href="assets/img4.jpg"><%= image_tag "img4.jpg"%></a></li>
+			</ul>
 	  </div>
 	</div>
 </section>
