--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -52,7 +52,8 @@ body{
 	padding: 30px 0;
 	h2{
 		font-family: 'Quicksand';
-		color: rgb(80, 106, 133)
+		color: rgb(80, 106, 133);
+		padding-bottom: 82px;
 	}
 	h5{
 		font-family: 'Quicksand';
