--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -111,6 +111,23 @@
 		  <a href="#" class="button">Enviar</a>
 		</div>
 	</div>
+
+	<div class="row">
+		<div class="large-12 columns text-center">
+		  <div class="row">
+			  <div class="large-6 columns text-right">
+			  	<a href="" target="_blank">
+              <%= image_tag "facebook.png", size: "55x55" %>
+            </a>
+			  </div>
+			  <div class="large-6 columns text-left">
+			  	<a href="" target="_blank">
+            <%= image_tag "linkedin.png", size: "55x55" %>
+          </a>
+			  </div>
+			</div>
+		</div>
+	</div>
 </section>
 
 <section class="fullscreen" id="mapa">
@@ -120,7 +137,7 @@
 <section class="fullscreen" id="footer">
 	<div class="row">
 	  <div class="large-12 columns">
-	  	<h6 class="subheader">Sitio diseñado y programado por magickdevs.com</h6>
+	  	<h6 class="subheader">Sitio diseñado y programado por <a href="">magickdevs.com</a></h6>
 	  </div>
 	</div>
 </section>
