formulario con un textarea, es mejor

--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -110,6 +110,10 @@ body{
 		font-family: 'Quicksand';
 		background-color: #1ABB9C;
 	}
+	textarea{
+		height: 91px;
+		resize: none;
+	}
 }
 
 #mapa{
