--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -91,20 +91,31 @@
 	</div>
 
 	<div class="row">
-		<div class="large-4 columns" style="color: #999999"> .</div>
-		<div class="large-4 columns text-center">
-		  <input type="text" placeholder="Nombre de persona o empresa">
-		</div>
-		<div class="large-4 columns" style="color: #999999"> .</div>
+	  <div class="large-6 columns text-center">
+	  	<div class="row">
+	  		<div class="large-6 columns text-center">.</div>
+	  		<div class="large-6 columns text-center">
+	  			<input type="text" placeholder="Nombre persona o empresa">
+	  		</div>	 
+	  	</div>
+	  	<div class="row">
+	  		<div class="large-6 columns text-center">.</div>
+	  		<div class="large-6 columns text-right">
+	  			<input type="text" placeholder="Email">
+	  		</div>	
+	  	</div>
+	  </div>
+	  <div class="large-6 columns text-center">
+	  	<div class="row">
+	  		<div class="large-6 columns text-center">
+	  			<textarea placeholder="Tu mensaje"></textarea>
+	  		</div>
+	  	</div>
+	  </div>
 	</div>
 
-	<div class="row">
-		<div class="large-4 columns" style="color: #999999"> .</div>
-	  <div class="large-4 columns text-center">
-		  <input type="text" placeholder="Email">
-		</div>
-		<div class="large-4 columns" style="color: #999999"> .</div>
-	</div>
+	<!-- <input type="text" placeholder="Email"> -->
+	<!-- <input type="text" placeholder="Nombre de persona o empresa"> -->
 
 	<div class="row">
 		<div class="large-12 columns text-center">
