ahora es sitio es true responsive :3 (faltan los iconos y estamos)

--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -65,7 +65,7 @@ body{
 
 #servicios{
 	background-color: #e4e4e4;
-	height: 30%;
+	height: auto;
 	padding: 15px 0;
 	color: #696E74;
 	h3{
@@ -101,7 +101,7 @@ body{
 	-ms-filter: blur(2px);*/
 	padding: 25px 0;
 	background-color: #999;
-	height: 50%;
+	height: auto;
 	h2{
 		font-family: 'Quicksand';
 		color: #fff;
