--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -67,19 +67,28 @@
 	  </div>
 	</div>
 
-	<div class="row" style="margin-bottom: 40px;">
-	  <div class="large-3 columns text-center"><%= image_tag "logo1.jpg", style: "height: 150px; width: 200px"%></div>
-	  <div class="large-3 columns text-center"><%= image_tag "logo2.jpg", style: "height: 150px; width: 170px"%></div>
-	  <div class="large-3 columns text-center"><%= image_tag "logo3.jpg", style: "height: 150px; width: 170px"%></div>
-	  <div class="large-3 columns text-center"><%= image_tag "logo4.jpg", style: "height: 170px; width: 190px"%></div>
+	<div class="row">
+	  <div class="large-12 columns text-center">
+	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
+			  <li><a href=""><%= image_tag "logo5.jpg", style: "height: 150px; width: 170px"%></a></li>
+			  <li><a href=""><%= image_tag "logo6.jpg", style: "height: 150px; width: 170px"%></a></li>
+			  <li><a href=""><%= image_tag "logo7.jpg", style: "height: 150px; width: 170px"%></a></li>
+			  <li><a href=""><%= image_tag "logo8.jpg", style: "height: 150px; width: 170px"%></a></li>
+			</ul>
+	  </div>
 	</div>
 
 	<div class="row">
-	  <div class="large-3 columns text-center"><%= image_tag "logo5.jpg", style: "height: 150px; width: 170px"%></div>
-	  <div class="large-3 columns text-center"><%= image_tag "logo6.jpg", style: "height: 150px; width: 170px"%></div>
-	  <div class="large-3 columns text-center"><%= image_tag "logo7.jpg", style: "height: 150px; width: 170px"%></div>
-	  <div class="large-3 columns text-center"><%= image_tag "logo8.jpg", style: "height: 150px; width: 170px"%></div>
+	  <div class="large-12 columns text-center">
+	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
+			  <li><a href=""><%= image_tag "logo1.jpg", style: "height: 150px; width: 200px"%></a></li>
+			  <li><a href=""><%= image_tag "logo2.jpg", style: "height: 150px; width: 170px"%></a></li>
+			  <li><a href=""><%= image_tag "logo3.jpg", style: "height: 150px; width: 170px"%></a></li>
+			  <li><a href=""><%= image_tag "logo4.jpg", style: "height: 170px; width: 190px"%></a></li>
+			</ul>
+	  </div>
 	</div>
+
 </section>
 
 
@@ -126,12 +135,12 @@
 	<div class="row">
 		<div class="large-12 columns text-center">
 		  <div class="row">
-			  <div class="large-6 columns text-right">
+			  <div class="large-6 columns">
 			  	<a href="" target="_blank">
               <%= image_tag "facebook.png", size: "55x55" %>
             </a>
 			  </div>
-			  <div class="large-6 columns text-left">
+			  <div class="large-6 columns">
 			  	<a href="" target="_blank">
             <%= image_tag "linkedin.png", size: "55x55" %>
           </a>
