fix data magellan

--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -16,18 +16,20 @@
 	  </div>
 	  <div class="large-12 columns">
 	  	<div class="large-12 columns text-center">
-		  	<h2><small>Grabados Publicitarios - Regalos Empresariales - Colegios - Señaletica - Premios - Piochas de Identificacion</small></h2>
+		  	<h2><small>Grabados Publicitarios - Regalos Empresariales - Colegios - Señaletica - Premios - Piochas de Identificación</small></h2>
 		  </div>
 	  </div>
 	  <div class="large-12 columns">
 	  	<div class="large-12 columns text-center">
-			  <dd data-magellan-arrival="trabajos"><a href="#trabajos" class="button">Conoce más</a></dd>
+			  <dd data-magellan-trabajos="trabajos">
+			  	<a name="trabajos" href="#trabajos" class="button">Conoce más</a>
+			  </dd>
 		  </div>
 	  </div>
 	</div>
 </section>
 
-<section class="fullscreen" id="trabajos">
+<section data-magellan-trabajos="trabajos" class="fullscreen" id="trabajos">
 	<div class="row">
 	  <div class="large-12 columns text-center">
 	  	<h2>Echa un vistazo a nuestros últimos trabajos</h2>
