--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -16,7 +16,7 @@
 	  </div>
 	  <div class="large-12 columns">
 	  	<div class="large-12 columns text-center">
-		  	<h2><small>Grabados Publicitarios - Regalos Empresariales - Colegios - Señaletica - Premios - Piochas de Identificación</small></h2>
+		  	<h2><small>Grabados Publicitarios - Regalos Empresariales - Colegios - Señalética - Premios - Piochas de Identificación</small></h2>
 		  </div>
 	  </div>
 	  <div class="large-12 columns">
