--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -51,7 +51,7 @@
 <section class="fullscreen" id="servicios">
 	<div class="row">
 	  <div class="large-12 columns text-center">
-	  	<h3>Calidad - Rapidez - Retiro sin costo</h3>
+	  	<h3>Calidad - Rapidez - Envío sin costo</h3>
 	  </div>
 	</div>
 
