--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -66,7 +66,7 @@
 
 	<div class="row">
 	  <div class="large-12 columns text-center">
-	  	<h5>Nos enfocamos en la prestacion de servicios de grabados publicitarios, colegios, empresas y marcaje en general. Prestamos un servicio de calidad, priorisamos los tiempos de entrega y asi satisfacemos las necesidades de nuestros clientes</h5>
+	  	<h5>Nos enfocamos en la prestación de servicios de grabados publicitarios, colegios, empresas y marcaje en general. Prestamos un servicio de calidad, priorisamos los tiempos de entrega y asi satisfacemos las necesidades de nuestros clientes</h5>
 	  </div>
 	</div>
 </section>
