--- a/app/assets/stylesheets/public.css.scss
+++ b/app/assets/stylesheets/public.css.scss
@@ -49,7 +49,7 @@ body{
 
 #trabajos{
 	background-color: #F2F5F7;
-	height: 70%;
+	height: auto;
 	padding: 30px 0;
 	h2{
 		font-family: 'Quicksand';
@@ -60,6 +60,9 @@ body{
 		font-family: 'Quicksand';
 		font-size:  22px;
 		color: #73879C;
+	}
+	img {
+		height: 170px;
 	}
 }
 
