change url images on index view

--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -48,37 +48,37 @@
 	<div class="row">
 	  <div class="large-12 columns text-center">
 	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
-			  <li><a href="assets/img1.jpg"><%= image_tag "img1.jpg"%></a></li>
-			  <li><a href="assets/img2.jpg"><%= image_tag "img2.jpg"%></a></li>
-			  <li><a href="assets/img3.jpg"><%= image_tag "img3.jpg"%></a></li>
-			  <li><a href="assets/img4.jpg"><%= image_tag "img4.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img1.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img1.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img2.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img2.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img3.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img3.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img4.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/img4.jpg"%></a></li>
 			</ul>
 	  </div>
 
 	  <div class="large-12 columns text-center">
 	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
-			  <li><a href="assets/CAM00091.jpg"><%= image_tag "CAM00091.jpg"%></a></li>
-			  <li><a href="assets/CAM00094.jpg"><%= image_tag "CAM00094.jpg"%></a></li>
-			  <li><a href="assets/CAM00100.jpg"><%= image_tag "CAM00100.jpg"%></a></li>
-			  <li><a href="assets/CAM00138.jpg"><%= image_tag "CAM00138.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00091.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00091.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00094.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00094.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00100.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00100.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00126.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00126.jpg"%></a></li>
 			</ul>
 	  </div>
 
 	  <div class="large-12 columns text-center">
 	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
 			  <li><a href="assets/ex.jpg"><%= image_tag "ex.jpg"%></a></li>
-			  <li><a href="assets/2015.jpg"><%= image_tag "2015.jpg"%></a></li>
-			  <li><a href="assets/CAM00172.jpg"><%= image_tag "CAM00172.jpg"%></a></li>
-			  <li><a href="assets/filmar_caribe.jpg"><%= image_tag "filmar_caribe.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/2015.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/2015.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00172.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00172.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/filmar_caribe.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/filmar_caribe.jpg"%></a></li>
 			</ul>
 	  </div>
 
 	  <div class="large-12 columns text-center">
 	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
-			  <li><a href="assets/galvano_madera.jpg"><%= image_tag "galvano_madera.jpg"%></a></li>
-			  <li><a href="assets/maqueta-flip-duoc.jpg"><%= image_tag "maqueta-flip-duoc.jpg"%></a></li>
-			  <li><a href="assets/CAM00126.jpg"><%= image_tag "CAM00126.jpg"%></a></li>
-			  <li><a href="assets/CAM00197.jpg"><%= image_tag "CAM00197.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/galvano_madera.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/galvano_madera.jpg"%></a></li>
+			  <li><a href="assets/maqueta-flip-duoc.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/maqueta-flip-duoc.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00126.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00126.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00197.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00197.jpg"%></a></li>
 			</ul>
 	  </div>
 	</div>
