fix repeated image in slide

--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -30,15 +30,15 @@
 	  </div>
 	  <div class="large-12 columns">
 	  	<div class="large-12 columns text-center">
-			  <dd data-magellan-trabajos="trabajos">
-			  	<a name="trabajos" href="#trabajos" class="button">Conoce más</a>
+			  <dd data-magellan-arrival="trabajos">
+			  	<a href="#trabajos" class="button">Conoce más</a>
 			  </dd>
 		  </div>
 	  </div>
 	</div>
 </section>
 
-<section data-magellan-trabajos="trabajos" class="fullscreen" id="trabajos">
+<section class="fullscreen" id="trabajos">
 	<div class="row">
 	  <div class="large-12 columns text-center">
 	  	<h2>Echa un vistazo a nuestros últimos trabajos</h2>
@@ -60,13 +60,13 @@
 			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00091.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00091.jpg"%></a></li>
 			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00094.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00094.jpg"%></a></li>
 			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00100.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00100.jpg"%></a></li>
-			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00126.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00126.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2/attachments/photos/CAM00146.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2/attachments/photos/CAM00146.jpg"%></a></li>
 			</ul>
 	  </div>
 
 	  <div class="large-12 columns text-center">
 	  	<ul class="clearing-thumbs small-block-grid-4" data-clearing>
-			  <li><a href="assets/ex.jpg"><%= image_tag "ex.jpg"%></a></li>
+			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/ex.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/ex.jpg"%></a></li>
 			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/2015.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/2015.jpg"%></a></li>
 			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00172.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/CAM00172.jpg"%></a></li>
 			  <li><a href="https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/filmar_caribe.jpg"><%= image_tag "https://s3.amazonaws.com/poliglota2dev/attachments/photos/521/filmar_caribe.jpg"%></a></li>
