--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -189,7 +189,7 @@
 <section class="fullscreen" id="footer">
 	<div class="row">
 	  <div class="large-12 columns">
-	  	<h6 class="subheader">Sitio diseñado y programado por <a href="">magickdevs.com</a></h6>
+	  	<h6 class="subheader">Sitio diseñado y programado por <a href="https://cl.linkedin.com/pub/diego-francisco-rodríguez-gonzález/74/b6/321">Diego Rodriguez</a></h6>
 	  </div>
 	</div>
 </section>
